# PlaneCostPrediction

./: .gitignore  README.md  pyproject.toml  task.md
inference/: inference.py
models/: baseline.ipynb  gradient_boosting.ipynb  improve_linear_regression.ipynb  random_forest.ipynb
spark_etl/: dataset_build.ipynb  eda.ipynb
utility_data/: .env.db  models.py  utils.py
