[project]
name = "plane_cost_prediction"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "geopy>=2.4.1",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "kaleido>=1.3.0",
    "mlflow>=3.14.0",
    "numpy>=2.4.6",
    "pandas>=2.2.0,<3.0.0",
    "plotly[express]>=6.8.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyspark>=4.1.2",
    "python-dotenv>=1.2.2",
]

[tool.config]
random-state = 69
